Bug Fix: Added overflow to the solution container

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -300,3 +300,6 @@
 	vertical-align: sub;
 	margin-right: 5px;
 }
+.course-solution-content{
+	overflow: scroll;
+}
